--- a/.github/config/title_label_config.yml
+++ b/.github/config/title_label_config.yml
@@ -1,8 +1,8 @@
+pr:cicd: [^cicd]
 pr:chore: [^chore]
 pr:doc: [^doc]
-pr:fix: [^fix]
 pr:feat: [^feat]
-pr:techdebt: [^techdebt]
-pr:test: [^test]
-pr:build: [^build]
+pr:fix: [^fix]
+pr:hotfix: [^hotfix]
 pr:refactor: [^refactor]
+pr:test: [^test]
