--- a/.github/workflows/deploy_external.yaml
+++ b/.github/workflows/deploy_external.yaml
@@ -17,7 +17,6 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-22.04
     steps:
-      - name: Webhook
+      - name: Execute dedicated Sunilium instance webhook
         run: |
           curl -X POST -H 'Authorization: Bearer ${{SUN_DYO_WEBHOOK_TOKEN}}' https://app.dyrectorio.com/api/deployments/8322f763-e611-40c7-a29b-bb21f2fd4822/start
-
