--- a/web/crux/.prettierrc
+++ b/web/crux/.prettierrc
@@ -14,5 +14,6 @@
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
-  "useTabs": false
+  "useTabs": false,
+  "plugins": ["prettier-plugin-organize-imports"]
 }
