--- a/web/crux/package.json
+++ b/web/crux/package.json
@@ -22,7 +22,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "grpc:debug": "GRPC_VERBOSITY=DEBUG GRPC_TRACE=all npm start",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" && prettier --check \"src/**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -38,7 +38,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.9.0",
     "@grpc/proto-loader": "^0.7.8",
-    "@nestjs-modules/mailer": "^1.9.1",
+    "@nestjs-modules/mailer": "^1.7.1",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/cli": "^10.1.11",
     "@nestjs/common": "^10.1.3",
@@ -96,13 +96,10 @@
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.6.2",
     "pino-pretty": "^10.2.0",
     "prettier": "^3.0.0",
+    "prettier-plugin-organize-imports": "^3.2.3",
     "prisma": "5.1.0",
     "rimraf": "^5.0.1",
     "ts-jest": "^29.1.1",
