--- a/golang/cmd/crane/.env.example
+++ b/golang/cmd/crane/.env.example
@@ -11,6 +11,8 @@ INGRESS_ROOT_DOMAIN=
 READ_HEADER_TIMEOUT=15s
 SECRET_PRIVATE_KEY_FILE=/path/to/secret.key
 DEBUG=true
+DEBUG_UPDATE_ALWAYS=false
+DEBUG_UPDATE_USE_CONTAINERS=true
 DEFAULT_REGISTRY=index.docker.io
 
 # crane specific options
