--- a/golang/cmd/dagent/.env.example
+++ b/golang/cmd/dagent/.env.example
@@ -10,6 +10,8 @@ IMPORT_CONTAINER_IMAGE=rclone/rclone:1.57.0
 INGRESS_ROOT_DOMAIN=
 READ_HEADER_TIMEOUT=15s
 DEBUG=true
+DEBUG_UPDATE_ALWAYS=false
+DEBUG_UPDATE_USE_CONTAINERS=true
 
 # DAgent specific options
 AGENT_CONTAINER_NAME=dagent
@@ -33,3 +35,4 @@ TRAEFIK_TLS=false
 DEFAULT_REGISTRY=index.docker.io
 WEBHOOK_TOKEN=
 SECRET_PRIVATE_KEY_FILE=/path/to/secret.key
+SECRET_TOKEN_FILE=/path/to/token.jwt
