--- a/web/crux/package.json
+++ b/web/crux/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.9.0",
     "@grpc/proto-loader": "^0.7.8",
-    "@nestjs-modules/mailer": "^1.7.1",
+    "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/cli": "^10.1.11",
     "@nestjs/common": "^10.1.3",
@@ -64,6 +64,7 @@
     "google-auth-library": "^9.0.0",
     "google-protobuf": "^3.21.2",
     "handlebars": "^4.7.8",
+    "isolated-vm": "^4.6.0",
     "nestjs-pino": "^3.3.0",
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
@@ -106,5 +107,11 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
+  },
+  "overrides": {
+    "vm2": "$isolated-vm"
+  },
+  "resolutions": {
+    "vm2": "isolated-vm"
   }
 }
