ci: remove hardcoded values and small changes

--- a/.github/workflows/deploy_external.yaml
+++ b/.github/workflows/deploy_external.yaml
@@ -19,4 +19,8 @@ jobs:
     steps:
       - name: Execute dedicated Sunilium instance webhook
         run: |
-          curl -X POST -H 'Authorization: Bearer ${{secrets.SUN_DYO_WEBHOOK_TOKEN}}' https://app.dyrectorio.com/api/deployments/8322f763-e611-40c7-a29b-bb21f2fd4822/start
+          if curl -s -X POST --fail --head'Authorization: Bearer ${{secrets.SUN_DYO_WEBHOOK_TOKEN}}' ${{secrets.SUN_DYO_WEBHOOK_API_URL}}; then
+            echo "Deployment successful."
+          else
+            exit 1
+          fi
