--- a/golang/cmd/crane/.env.example
+++ b/golang/cmd/crane/.env.example
@@ -9,8 +9,9 @@ DEFAULT_VOLUME_SIZE=1G
 IMPORT_CONTAINER_IMAGE=rclone/rclone:1.57.0
 INGRESS_ROOT_DOMAIN=
 READ_HEADER_TIMEOUT=15s
-SECRET_PRIVATE_KEY_FILE=/path/to/secret.key
 DEBUG=true
+DEBUG_UPDATE_ALWAYS=false
+DEBUG_UPDATE_USE_CONTAINERS=true
 DEFAULT_REGISTRY=index.docker.io
 
 # crane specific options
@@ -24,4 +25,4 @@ KUBECONFIG=
 TEST_TIMEOUT=15s
 SECRET_NAME=dyrectorio-secret
 SECRET_NAMESPACE=dyrectorio
-
+CRANE_IN_CLUSTER=false
