Revert "chore: build golang  image without explicit merge"
This reverts commit ee825cf00b9919ff3212de87100a5744706425eb.

--- a/.github/workflows/builder_image_golang.yaml
+++ b/.github/workflows/builder_image_golang.yaml
@@ -1,7 +1,7 @@
 name: builder_image_golang
 on:
   push:
-    # branches: [develop]
+    branches: [develop]
     paths: [images/builder-golang/**, .github/workflows/image-builder-golang.yml]
   pull_request:
     paths: [images/builder-golang/**, .github/workflows/image-builder-golang.yml]
