--- a/golang/cmd/crane/.env.example
+++ b/golang/cmd/crane/.env.example
@@ -14,15 +14,24 @@ DEBUG_UPDATE_ALWAYS=false
 DEBUG_UPDATE_USE_CONTAINERS=true
 DEFAULT_REGISTRY=index.docker.io
 
-# crane specific options
+# Crane specific options
+# Under obsoletion
 CRANE_GEN_TCP_INGRESS_MAP=
+# Put 'true' to use in-cluster auth
 CRANE_IN_CLUSTER=true
+# Kube
 DEFAULT_KUBE_TIMEOUT=2m
+# Field manager name
 FIELD_MANAGER_NAME=crane-dyrector-io
+# Use 'Force: true' while deploying
 FORCE_ON_CONFLICTS=true
+# The key/label name for audit purposes
 KEY_ISSUER=co.dyrector.io/issuer
+# The "kubectl" configuration location
 KUBECONFIG=
+# Timeouts used in tests, no effect on deployment
 TEST_TIMEOUT=15s
+# For injecting SecretPrivateKey
 SECRET_NAME=dyrectorio-secret
 SECRET_NAMESPACE=dyrectorio
 CRANE_IN_CLUSTER=false
