--- a/web/crux-ui/.env.example
+++ b/web/crux-ui/.env.example
@@ -3,20 +3,28 @@ CRUX_UI_URL=http://localhost:8000
 KRATOS_URL=http://localhost:8000/kratos
 KRATOS_ADMIN_URL=http://localhost:4434
 
+# Sets the severity level of logging
+# Possible values: trace, debug, info, warn, error, and fatal
+# The settings come in a hierarchic order
+# Example: error contains fatal
 LOG_LEVEL=trace
 
-# Google recaptcha config
+## Google ReCAPTCHA config
+
 DISABLE_RECAPTCHA=true
-# required only when rechaptcha is enabled
+# Required only when ReCAPTCHA is enabled
 RECAPTCHA_SITE_KEY=<public_recaptcha_site_key>
 RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
 
-# Playwright test config (for e2e tests)
+## Playwright test config (for e2e tests)
+
 E2E_BASE_URL=http://localhost:8000
 
 # Docker HUB Proxy (optional)
 # HUB_PROXY_URL=http://<proxy_url>
 # HUB_PROXY_TOKEN=<proxy_token>
 
-# overriding the node dns result order regardless of the NODE_ENV value
-#DNS_DEFAULT_RESULT_ORDER=ipv4first
+# For overriding the node dns result order regardless of the NODE_ENV value
+# It may be necessary for running the e2e tests,
+# because node resolves localhost to IPv6 by default
+# DNS_DEFAULT_RESULT_ORDER=ipv4first
