--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -1,39 +1,58 @@
 NODE_ENV=development
 
-# Application configs
-KRATOS_URL=http://localhost:4433
-KRATOS_ADMIN_URL=http://localhost:4434
+## Development configurations
+
+# Kratos public API
 KRATOS_URL=http://localhost:8000/kratos
-DATABASE_URL="postgresql://crux:crux@localhost:5432/crux?schema=public"
+# Kratos admin API
+# This should never be exposed
+KRATOS_ADMIN_URL=http://localhost:4434
+DATABASE_URL="postgresql://username:password@localhost:5432/crux?schema=public"
 CRUX_UI_URL=http://localhost:8000
-# Port settings
+
+## Port settings
+
+# Agent gRPC API port
 GRPC_AGENT_PORT=5000
+# RestAPI port
 HTTP_API_PORT=1848
+# Prometheus metrics port
 METRICS_API_PORT=1956
 
 # Podman has different alias host.containers.local:5000
-# for local development replace this with localhost:5000
-CRUX_AGENT_ADDRESS=host.docker.internal:5000
+CRUX_AGENT_ADDRESS=localhost:5000
+# Signing secret for the generated JWTs
 JWT_SECRET=jwt-secret-token
 
-# Uncomment to use a specific agent version
-# CRUX_AGENT_IMAGE=stable
+# The Docker image tag in the node install script
+# Uncomment to use a different agent version
+# Defaults to the version of dyrector.io
+# CRUX_AGENT_IMAGE=latest
 
-# Install script docker pull disabled for the E2E tests
-AGENT_INSTALL_SCRIPT_DISABLE_PULL=true
+# Uncomment to prevent the install script from
+# overwriting your locally built agent image
+# AGENT_INSTALL_SCRIPT_DISABLE_PULL=true
 
 # Possible values: trace, debug, info, warn, error, and fatal
+# The settings above come in a hierarchic order
+# Example: error contains fatal
 LOG_LEVEL=debug
 
-# Email service config
+## Email service config
+# SMTP URL for the mailslurper
 SMTP_URI=smtps://test:test@localhost:1025/?skip_ssl_verify=true&legacy_ssl=true
-FROM_EMAIL=noreply@dyrector.io
-FROM_NAME="dyrector.io Platform"
+# E-mail address for dyrector.io invitation links, password resets and others
+FROM_EMAIL=from@example.com
+# E-mail sender name for dyrector.io invitation links, password resets and others
+FROM_NAME=dyrector.io
 
-# Google recaptcha config
+## Google ReCAPTCHA config
 DISABLE_RECAPTCHA=true
-# required only when rechaptcha is enabled
+# Required only when ReCAPTCHA is enabled
 RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
 
-# overriding the node dns result order regardless of the NODE_ENV value
+# For overriding the node DNS result order
+# regardless of the NODE_ENV value
+# It may be necessary for running the e2e tests,
+# because node resolves localhost to IPv6 by default
 # DNS_DEFAULT_RESULT_ORDER=ipv4first
