--- a/.github/workflows/product_builder.yaml
+++ b/.github/workflows/product_builder.yaml
@@ -27,8 +27,56 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  conventional_commits:
+  check_pr_author_membership:
     runs-on: ubuntu-22.04
+    outputs:
+      member: ${{ steps.check_pr_author_status.outputs.member }}
+    steps:
+      - name: Set default member status
+        id: set_defaults
+        run: |
+          echo "member=false" >> $GITHUB_OUTPUT
+      - name: Check PR author's team membership status
+        id: check_pr_author_status
+        env:
+          TEAM_SLUG: 'core-engineers'
+        run: |
+          pr_author="${{ github.event.pull_request.user.login }}"
+          org_name="${{ github.repository_owner }}"
+
+          response=$(curl -L \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/orgs/$org_name/teams/$TEAM_SLUG/memberships/$pr_author)
+
+          echo "pr_author=$pr_author"
+          echo "org_name=$org_name"
+          echo "response=$response"
+
+          if [[ $response == *"\"role\":\"maintainer\""* ]] || [[ $response == *"\"role\":\"member\""* ]]; then
+            echo "The PR author $pr_author is a member of the team $TEAM_SLUG."
+            echo "member=true" >> $GITHUB_OUTPUT
+          else
+            echo "The PR author $pr_author is NOT a member of the team $TEAM_SLUG."
+          fi
+  assign_runner:
+    runs-on: ubuntu-22.04
+    needs: check_pr_author_membership
+    outputs:
+      runner: ${{ steps.determine_runner.outputs.runner }}
+    steps:
+      - name: Determine runner label
+        id: determine_runner
+        run: |
+          if [[ "${{ needs.check_pr_author_membership.outputs.member }}" == "true" ]]; then
+            echo "runner=4375vb34b5" >> $GITHUB_OUTPUT
+          else
+            echo "runner=ubuntu-22.04" >> $GITHUB_OUTPUT
+          fi
+  conventional_commits:
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: assign_runner
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -49,7 +97,8 @@ jobs:
         run: sh -x pr_title_validation.sh '${{ github.event.pull_request.title }}'
   # Validate the YAML documents
   yaml_lint:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: assign_runner
     container:
       # yamlfmt resides here because alpine doesn't provide yamlfmt package
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/golang:2
@@ -59,8 +108,8 @@ jobs:
       - name: Run YAML linting
         run: yamlfmt -lint .
   gather_changes:
-    runs-on: ubuntu-22.04
-    needs: [conventional_commits, yaml_lint]
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, conventional_commits, yaml_lint]
     outputs:
       agents: ${{ steps.filter.outputs.agents }}
       crux: ${{ steps.filter.outputs.crux }}
@@ -112,8 +161,8 @@ jobs:
           echo "release=true" >> $GITHUB_OUTPUT
   # agents scope
   go_lint:
-    runs-on: ubuntu-22.04
-    needs: gather_changes
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, gather_changes]
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/golang:2
     defaults:
@@ -136,8 +185,8 @@ jobs:
       - name: Run golangci-lint
         run: make lint
   go_security:
-    runs-on: ubuntu-22.04
-    needs: gather_changes
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, gather_changes]
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/golang:2
     defaults:
@@ -160,8 +209,8 @@ jobs:
       - name: Run gosec
         run: make security
   go_integration:
-    runs-on: ubuntu-22.04
-    needs: gather_changes
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, gather_changes]
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/golang:2
     defaults:
@@ -186,8 +235,8 @@ jobs:
       - name: Run integration tests
         run: make k3d-test
   go_test:
-    runs-on: ubuntu-22.04
-    needs: gather_changes
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, gather_changes]
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/golang:2
     defaults:
@@ -212,13 +261,8 @@ jobs:
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v3
   go_build:
-    runs-on: ubuntu-22.04
-    needs:
-      - go_security
-      - go_lint
-      - go_test
-      - go_integration
-      - gather_changes
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, go_security, go_lint, go_test, go_integration, gather_changes]
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/golang:2
     defaults:
@@ -281,8 +325,8 @@ jobs:
           key: ${{ runner.os }}-golang-${{ hashFiles('go.sum') }}
   # crux scope
   crux_lint:
-    runs-on: ubuntu-22.04
-    needs: gather_changes
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, gather_changes]
     defaults:
       run:
         working-directory: ${{ env.CRUX_WORKING_DIRECTORY }}
@@ -307,8 +351,8 @@ jobs:
           path: ${{ env.CRUX_WORKING_DIRECTORY }}/.npm/**
           key: ${{ runner.os }}-crux-${{ hashFiles('web/crux/package-lock.json') }}
   crux_test:
-    runs-on: ubuntu-22.04
-    needs: gather_changes
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, gather_changes]
     defaults:
       run:
         working-directory: ${{ env.CRUX_WORKING_DIRECTORY }}
@@ -336,8 +380,8 @@ jobs:
           path: ${{ env.CRUX_WORKING_DIRECTORY }}/.npm/**
           key: ${{ runner.os }}-crux-${{ hashFiles('web/crux/package-lock.json') }}
   crux_build:
-    runs-on: ubuntu-22.04
-    needs: [crux_test, crux_lint, gather_changes]
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, crux_test, crux_lint, gather_changes]
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/nodejs:1
     defaults:
@@ -369,8 +413,8 @@ jobs:
           path: ${{ env.CRUX_WORKING_DIRECTORY }}/crux.zstd
   # crux-ui scope
   crux-ui_lint:
-    runs-on: ubuntu-22.04
-    needs: gather_changes
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, gather_changes]
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/nodejs:1
     defaults:
@@ -390,8 +434,8 @@ jobs:
       - name: Lint
         run: npm run lint
   crux-ui_unit_test:
-    runs-on: ubuntu-22.04
-    needs: gather_changes
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, gather_changes]
     defaults:
       run:
         working-directory: ${{ env.CRUX_UI_WORKING_DIRECTORY }}
@@ -416,8 +460,8 @@ jobs:
           path: ${{ env.CRUX_UI_WORKING_DIRECTORY }}/.npm/**
           key: ${{ runner.os }}-cruxui-${{ hashFiles('web/crux-ui/package-lock.json') }}
   crux-ui_build:
-    runs-on: ubuntu-22.04
-    needs: [crux-ui_lint, crux-ui_unit_test, gather_changes]
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, crux-ui_lint, crux-ui_unit_test, gather_changes]
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/nodejs:1
     defaults:
@@ -449,8 +493,8 @@ jobs:
           path: ${{ env.CRUX_UI_WORKING_DIRECTORY }}/crux-ui.zstd
   # kratos scope
   kratos_build:
-    runs-on: ubuntu-22.04
-    needs: gather_changes
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, gather_changes]
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:2
     defaults:
@@ -471,18 +515,11 @@ jobs:
           path: ${{ env.KRATOS_WORKING_DIRECTORY }}/kratos.zstd
   # e2e scope
   e2e:
-    runs-on: ubuntu-22.04
-    # runs-on: self-hosted
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
     container:
       image: ghcr.io/dyrector-io/dyrectorio/playwright:latest
       volumes: ['/var/run/docker.sock:/var/run/docker']
-    needs:
-      - go_build
-      - crux_build
-      - crux-ui_build
-      - kratos_build
-      - gather_changes
-      - conventional_commits
+    needs: [assign_runner, go_build, crux_build, crux-ui_build, kratos_build, gather_changes, conventional_commits]
     if: |
       always() &&
       (needs.go_build.result == 'success' || needs.go_build.result == 'skipped') &&
@@ -611,15 +648,15 @@ jobs:
           key: ${{ runner.os }}-e2e_test-${{ hashFiles('web/crux-ui/package-lock.json') }}
   # separate build push action job is needed because of buildx limitations
   go_push:
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, gather_changes, e2e]
     permissions:
       packages: write
-    runs-on: ubuntu-22.04
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/golang:2
     defaults:
       run:
         working-directory: ${{ env.GOLANG_WORKING_DIRECTORY }}
-    needs: [gather_changes, e2e]
     if: |
       always() &&
       (github.ref_name == 'develop' || github.ref_name == 'main' || github.ref_type == 'tag') &&
@@ -679,12 +716,12 @@ jobs:
           image_version: ${{ needs.gather_changes.outputs.tag }}
   # go sign does not use docker push in order to keep multi-arch images intact
   go_retag_and_sign:
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, gather_changes, go_push]
     permissions:
       packages: write
-    runs-on: ubuntu-22.04
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:2
-    needs: [gather_changes, go_push]
     if: |
       always() &&
       (github.ref_name == 'develop' || github.ref_name == 'main' || github.ref_type == 'tag') &&
@@ -736,12 +773,12 @@ jobs:
         #   env:
         #     COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
   crux_push:
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, crux_build, e2e, gather_changes]
     permissions:
       packages: write
-    runs-on: ubuntu-22.04
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:2
-    needs: [crux_build, e2e, gather_changes]
     if: |
       always() &&
       (github.ref_name == 'develop' || github.ref_name == 'main' || github.ref_type == 'tag') &&
@@ -794,12 +831,12 @@ jobs:
         env:
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
   crux-ui_push:
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, crux-ui_build, e2e, gather_changes]
     permissions:
       packages: write
-    runs-on: ubuntu-22.04
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:2
-    needs: [crux-ui_build, e2e, gather_changes]
     if: |
       always() &&
       (github.ref_name == 'develop' || github.ref_name == 'main' || github.ref_type == 'tag') &&
@@ -852,12 +889,12 @@ jobs:
         env:
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
   kratos_push:
+    runs-on: ${{ needs.assign_runner.outputs.runner }}
+    needs: [assign_runner, kratos_build, e2e, gather_changes]
     permissions:
       packages: write
-    runs-on: ubuntu-22.04
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:2
-    needs: [kratos_build, e2e, gather_changes]
     if: |
       always() &&
       (github.ref_name == 'develop' || github.ref_name == 'main' || github.ref_type == 'tag') &&
