fix: fix typo in .env.example

--- a/.env.example
+++ b/.env.example
@@ -33,7 +33,7 @@ LOG_LEVEL=debug
 
 # This value is the password to crux's database
 CRUX_POSTGRES_PASSWORD=Random_Generated_String
-# This value is the password to kratos's database
+# This value is the password to Kratos's database
 KRATOS_POSTGRES_PASSWORD=Random_Generated_String
 
 ## External URL of the site https://example.com(:port if not 443)
