fix: improve env.examples
Fix to .env.examples based on feedback

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,12 @@
 # Traefik requires this file to be able to route the requests to the containers
 DOCKER_SOCKET=/var/run/docker.sock
 
-## Domain settings
+## General
 
 # Tag for images. It's stable by default
 DYO_VERSION=stable
-# Required for Traefik's certification resolution. It should be your
-# domain where dyrector.io will be available
+# Required for Traefik's certification resolution
+# It should be your domain where dyrector.io will be available
 DOMAIN=example.com
 # Your server's timezone
 TIMEZONE=UTC
@@ -66,8 +66,8 @@ FROM_NAME=dyrector.io
 
 ## ReCAPTCHA secrets
 
-# In case you don't want to use ReCAPTCHA set DISABLE_RECAPTCHA to true.
-# Highly recommended to set DISABLE_RECAPTCHA to false
+# In case you don't want to use ReCAPTCHA set DISABLE_RECAPTCHA to true
+# Highly recommended to keep the default value, which is `false`
 DISABLE_RECAPTCHA=false
 # Create ReCAPTCHA V2 credentials in the ReCAPTCHA admin console
 # It is recommended to use the inivisble type
