--- a/golang/cmd/crane/.env.example
+++ b/golang/cmd/crane/.env.example
@@ -15,11 +15,9 @@ DEBUG_UPDATE_USE_CONTAINERS=true
 DEFAULT_REGISTRY=index.docker.io
 
 # Crane specific options
-# Under obsoletion
-CRANE_GEN_TCP_INGRESS_MAP=
 # Put 'true' to use in-cluster auth
-CRANE_IN_CLUSTER=true
-# Kube
+CRANE_IN_CLUSTER=false
+# The duration amount that for a kubernetes API request to complete
 DEFAULT_KUBE_TIMEOUT=2m
 # Field manager name
 FIELD_MANAGER_NAME=crane-dyrector-io
@@ -34,4 +32,3 @@ TEST_TIMEOUT=15s
 # For injecting SecretPrivateKey
 SECRET_NAME=dyrectorio-secret
 SECRET_NAMESPACE=dyrectorio
-CRANE_IN_CLUSTER=false
