--- a/golang/cmd/dagent/.env.example
+++ b/golang/cmd/dagent/.env.example
@@ -27,18 +27,18 @@ GRPC_KEEPALIVE=60s
 # Path of 'docker.sock' or other local/remote
 # address where we can communicate with docker
 HOST_DOCKER_SOCK_PATH=/var/run/docker.sock
-HOST_MOUNT_PATH=/srv/dagent
 # Containers mount path default
 INTERNAL_MOUNT_PATH=/srv/dagent
-# Loglines to skip.
+# Loglines to skip if not defined on the request
 LOG_DEFAULT_SKIP=0
-# Loglines to take.
+# Loglines to take
 LOG_DEFAULT_TAKE=100
 MIN_DOCKER_VERSION=20.10
 # E-mail address to use for dynamic certificate requests
 TRAEFIK_ACME_MAIL=
 TRAEFIK_ENABLED=false
-# Loglevel for Traefik. Set to "DEBUG" to access Traefik dashboard
+# Loglevel for Traefik
+# Set to "DEBUG" to access Traefik dashboard
 TRAEFIK_LOG_LEVEL=
 # Whether to enable Traefik TLS or not
 TRAEFIK_TLS=false
