cicd: add more coverage files, to display a more valid number (#840)

--- a/.github/workflows/product_builder.yaml
+++ b/.github/workflows/product_builder.yaml
@@ -184,7 +184,15 @@ jobs:
       - name: Init k3d
         run: make k3d-init
       - name: Run integration tests
-        run: make k3d-test
+        run: |
+          make k3d-config && \
+          export KUBECONFIG="$(pwd)/k3d-auth.yaml" && \
+          make test-integration
+      - name: Upload integration test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: golang-integration-coverage
+          path: ${{ env.GOLANG_WORKING_DIRECTORY }}/**.cov
   go_test:
     runs-on: ubuntu-22.04
     needs: gather_changes
@@ -209,8 +217,38 @@ jobs:
         run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
       - name: Run unit tests with coverage
         run: make test-unit-with-coverage
+      - name: Upload unit test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: golang-unit-coverage
+          path: ${{ env.GOLANG_WORKING_DIRECTORY }}/**.cov
+  go_coverage_upload:
+    runs-on: ubuntu-22.04
+    needs:
+      - go_security
+      - go_lint
+      - go_test
+      - go_integration
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v4
+      - name: Install coverage merger
+        run: go install go.shabbyrobe.org/gocovmerge/cmd/gocovmerge@latest
+      - name: Download integration test results from artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: golang-integration-coverage
+      - name: Download unit test results from artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: golang-unit-coverage
+      - name: Merge coverage
+        run: gocovmerge ./builder.cov ./cli.cov ./crane.cov ./dagent.cov ./internal.cov ./unit.cov  > ./merged.cov
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v3
+        with:
+          files: ./merged.cov
+          name: golang-coverage
   go_build:
     runs-on: ubuntu-22.04
     needs:
