chore: remove debug logs

--- a/images/playwright/Dockerfile
+++ b/images/playwright/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:lunar
 
-RUN apt-get update && apt-get install -y docker-compose nodejs npm jq pip curl zstd
+RUN apt-get update && apt-get install -y docker-compose nodejs npm jq curl zstd
 
 RUN mkdir playwright
 
