feat(ci): optimize github workflow for non-code changes (#833)
Co-authored-by: Mate Vago <mate.vago.it@gmail.com>
Co-authored-by: Levente Orban <levente.orban@dyrector.io>

--- a/golang/Makefile
+++ b/golang/Makefile
@@ -245,6 +245,7 @@ k3d-test: k3d-test
 	export KUBECONFIG='$(PWD)/k3d-auth.yaml'
 	go test -tags=integration -race ./pkg/crane/...
 
+.PHONY: k3d-rm
 k3d-rm:
 	k3d cluster delete crane-test
 
