--- a/.github/workflows/product_builder.yaml
+++ b/.github/workflows/product_builder.yaml
@@ -642,7 +642,7 @@ jobs:
         id: get_e2e_network
         run: |
           E2E_CONTAINER_ID=$(docker ps -q -f label=e2e-${{ github.run_id }}-${{ github.run_attempt }})
-          E2E_NETWORK_NAME=$(docker inspect $E2E_CONTAINER_ID -f '{{range .NetworkSettings.Networks}}{{.Name}}{{end}}')
+          E2E_NETWORK_NAME=$(docker inspect $E2E_CONTAINER_ID -f '{{range $key, $value := .NetworkSettings.Networks}}{{$key}}{{end}}')
           echo "e2e_network_name=$E2E_NETWORK_NAME" >> $GITHUB_ENV
       - name: Setup using cli
         run: |
